# project-blackbeard

./: .gitignore  AGENTS.md  BLACKWELL_OPTIMIZATION_AREAS.md  CMakeLists.txt  README.md  baseline-benchmark.md  fp4-benchmark.md  moe-spec-baseline.md  rebuild_llama.sh
build-fate/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  llama.pc
build-fate-cuda/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json  llama-config.cmake  llama-version.cmake
common/: arg.cpp  common.cpp  common.h  preset.cpp  speculative.cpp
conversion/: base.py  gemma.py  qwen.py
docs/: build.md
examples/: CMakeLists.txt
examples/simple/: simple.cpp
examples/speculative-simple/: speculative-simple.cpp
ggml/: CMakeLists.txt
include/: llama.h
requirements/: requirements-convert_legacy_llama.txt
src/: CMakeLists.txt  llama-arch.cpp  llama-arch.h  llama-context.cpp  llama-context.h  llama-fate.cpp  llama-fate.h  llama-grammar.cpp  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-kv-cache-dsa.cpp  llama-kv-cache-dsa.h  llama-kv-cache-dsv4.cpp  llama-kv-cache-dsv4.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-model-loader.cpp  llama-model-saver.cpp  llama-model.cpp  (+1 more)
(+974 files in other folders)
